--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,55 +1,51 @@
-/* import font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* tailwind config */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 /*General styles */
 
-:root {
-    --primary-color: red;
-    --header-bg: green;
-}
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul>li {
-    list-style: none;
+  list-style: none;
 }
 
 /* Input */
 input:focus {
-    border: none;
+  border: none;
 }
 
 /*  Typography */
 
 h1, h2, h3, h4, h5, h6, p, span, a, button {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Montserrat", Helvetica, sans-serif;
 }
+
 aside {
-    position: fixed;
-    height: 100vh;
-    overflow-y: scroll;
-    width: 50px;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    transition: all 0.5s;
+  position: fixed;
+  height: 100vh;
+  overflow-y: scroll;
+  width: 50px;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  transition: all 0.5s;
 }
-.nav_link a{
+
+.nav_link a {
   writing-mode: vertical-rl;
-text-orientation: mixed;
+  text-orientation: mixed;
 }
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 aside::-webkit-scrollbar {
   display: none;
@@ -57,71 +53,84 @@ aside::-webkit-scrollbar {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 aside {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
+
 main {
-    margin-left: 50px;
-    min-height: 100vh;
-    transition: all 0.5s;
+  margin-left: 50px;
+  min-height: 100vh;
+  transition: all 0.5s;
 }
+
 #hero {
-    width: 100%;
-    height: 100vh;
-    background: url("../public/assets/img/hero-bg.jpg") left center;
-    background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background: url("../public/assets/img/hero-bg.jpg") left center;
+  background-size: cover;
+}
+
+#hero:before {
+  content: "";
+  background: rgba(5, 13, 24, 0.3);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+#hero .hero-container {
+  position: relative;
+  z-index: 2;
+  min-width: 300px;
+}
+
+#hero h1 {
+  margin: 0 0 10px 0;
+  font-size: 79px;
+  font-weight: 700;
+  line-height: 56px;
+  color: #fff;
+}
+
+#hero p {
+  color: #fff;
+  margin-bottom: 50px;
+  font-size: 26px;
+  font-family: "Poppins", sans-serif;
+}
+
+#hero p span {
+  color: #fff;
+  padding-bottom: 4px;
+  letter-spacing: 1px;
+  border-bottom: 3px solid #292929;
+}
+
+@media (min-width: 1024px) {
+  #hero {
+    background-attachment: fixed;
   }
-  #hero:before {
-    content: "";
-    background: rgba(5, 13, 24, 0.3);
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-  }
-  #hero .hero-container {
-    position: relative;
-    z-index: 2;
-    min-width: 300px;
-  }
+}
+
+@media (max-width: 768px) {
   #hero h1 {
-    margin: 0 0 10px 0;
-    font-size: 79px;
-    font-weight: 700;
-    line-height: 56px;
-    color: #fff;
+    font-size: 28px;
+    line-height: 36px;
   }
-  #hero p {
-    color: #fff;
-    margin-bottom: 50px;
-    font-size: 26px;
-    font-family: "Poppins", sans-serif;
+
+  #hero h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
   }
-  #hero p span {
-    color: #fff;
-    padding-bottom: 4px;
-    letter-spacing: 1px;
-    border-bottom: 3px solid #292929;
-  }
-  @media (min-width: 1024px) {
-    #hero {
-      background-attachment: fixed;
-    }
-  }
-  @media (max-width: 768px) {
-    #hero h1 {
-      font-size: 28px;
-      line-height: 36px;
-    }
-    #hero h2 {
-      font-size: 18px;
-      line-height: 24px;
-      margin-bottom: 30px;
-    }
-  }
+}
+
 footer {
-    margin-left: 50px;
-    transition: all 0.5s;
+  margin-left: 50px;
+  transition: all 0.5s;
 }
